--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div> You have successfully started your Typescript application using Webpack. By <a href="https://twitter.com/renaudin_yann">@renaudin_yann</a>    </div>
+  <div id="app"></div>
 </body>
 
 </html>
